# adguardvpn-web

./: .gitignore  Cargo.toml  README.md  config.toml
deploy/: adguardvpn-web.service  install.sh  manage.sh
deploy/openwrt/: adguardvpn-web  vpn.sh
deploy/openwrt/templates/: base.html  index.html
src/: auth.rs  cli.rs  config.rs  handlers.rs  main.rs  templates.rs
static/: style.css
templates/: login.html
