[package]
name = "adguardvpn-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
askama = "0.12"
tower = "0.5"
rust-embed = "8"
mime_guess = "2"
tower-sessions = "0.14"
regex = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
